--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 </head>
 <body>
     <div class="container">
-        <div class="profile-picture">
-            <img src="myPhoto.jpeg" alt="Your Photo">
+        <div class="profile-circle">
+            <img src="your-photo.jpg" alt="Your Photo">
         </div>
-        <div class="contact-info">
+        <div class="contact-icons">
             <a href="tel:+1234567890" class="icon">
                 <i class="fas fa-phone"></i>
             </a>
