--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <div class="profile-circle">
-            <img src="your-photo.jpg" alt="Your Photo">
+            <img src="myPhoto.jpeg" alt="Your Photo">
         </div>
         <div class="contact-icons">
             <a href="tel:+1234567890" class="icon">
