--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
             <img src="myPhoto.jpeg" alt="Your Photo">
         </div>
         <div class="contact-icons">
-            <a href="tel:+1234567890" class="icon">
+            <a href="tel:+436644141540" class="icon">
                 <i class="fas fa-phone"></i>
             </a>
-            <a href="mailto:your.email@example.com" class="icon">
+            <a href="mailto:fasching.andreas@outlook.com" class="icon">
                 <i class="fas fa-envelope"></i>
             </a>
-            <a href="https://instagram.com/yourprofile" target="_blank" class="icon">
+            <a href="https://instagram.com/the.andymancan" target="_blank" class="icon">
                 <i class="fab fa-instagram"></i>
             </a>
         </div>
