--- a/index.html
+++ b/index.html
@@ -11,17 +11,16 @@
 <body>
     <div class="container">
         <div class="profile-circle">
-    <img src="myPhoto.jpeg" alt="Your Photo" style="width: 200px; height: 200px; border-radius: 50%; object-fit: cover;">
-</div>
-
+            <img src="myPhoto.jpeg" alt="Your Photo">
+        </div>
         <div class="contact-icons">
-            <a href="tel:+436644141540" class="icon">
+            <a href="tel:+436644141540" class="icon phone">
                 <i class="fas fa-phone"></i>
             </a>
-            <a href="mailto:fasching.andreas@outlook.com" class="icon">
+            <a href="mailto:fasching.andreas@outlook.com" class="icon email">
                 <i class="fas fa-envelope"></i>
             </a>
-            <a href="https://instagram.com/the.andymancan" target="_blank" class="icon">
+            <a href="https://instagram.com/the.andymancan" target="_blank" class="icon instagram">
                 <i class="fab fa-instagram"></i>
             </a>
         </div>
