--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body>
     <div class="container">
         <div class="profile-circle">
-            <img src="myPhoto.jpeg" alt="Your Photo">
-        </div>
+    <img src="myPhoto.jpeg" alt="Your Photo" style="width: 200px; height: 200px; border-radius: 50%; object-fit: cover;">
+</div>
         <div class="contact-icons">
             <a href="tel:+436644141540" class="icon phone">
                 <i class="fas fa-phone"></i>
