--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
             <a href="https://instagram.com/the.andymancan" target="_blank" class="icon instagram">
                 <i class="fab fa-instagram"></i>
             </a>
+            <a href="https://www.linkedin.com/in/andreas-fasching-478200329/" target="_blank" class="icon linkedin">
+                <i class="fab fa-linkedin"></i>
+            </a>
         </div>
     </div>
 </body>
