--- a/index.html
+++ b/index.html
@@ -1,157 +1,152 @@
-<html lang="en" class=""><head>
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
   <meta charset="UTF-8">
-  
-  <style id="INLINE_PEN_STYLESHEET_ID">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Contact Me</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
+  <style>
     * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-body {
-    font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    margin: 0;
-}
-
-.container {
-    position: relative;
-    text-align: center;
-}
-
-.profile-circle {
-    width: 400px;
-    height: 400px;
-    border-radius: 50%;
-    overflow: hidden;
-    border: 5px solid #333;
-    margin: 0 auto; /* Centering the profile-circle horizontally */
-}
-
-.profile-circle img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-
-.contact-icons {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    width: 650px; /* Adjusted to match the profile-circle size */
-    height: 650px; /* Adjusted to match the profile-circle size */
-    transform: translate(-50%, -50%);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.icon {
-    font-size: 4rem; /* Increased size */
-    color: #111111;
-    text-decoration: none;
-    transition: color 0.3s ease;
-    position: absolute;
-}
-
-.icon:hover {
-    color: #6ec418;
-}
-
-/* Positioning the icons */
-.phone {
-    top: 10%; /* Positioned at 12 o'clock */
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
-.phone:hover {
-    color: #25D366;
-}
-
-.email {
-    bottom: 10%; /* Positioned at 6 o'clock */
-    left: 50%;
-    transform: translate(-50%, 50%);
-}
-.email:hover {
-    color: #fbbc05;
-}
-
-.instagram {
-    right: 10%; /* Positioned at 3 o'clock */
-    top: 50%;
-    transform: translate(50%, -50%);
-}
-.instagram:hover {
-    color: #e1306c;
-}
-
-.linkedin {
-    left: 10%; /* Positioned at 9 o'clock */
-    top: 50%;
-    transform: translate(-50%, -50%);
-}
-.linkedin:hover {
-    color: #0077B5;
-}
-
-/* Mobile adjustments */
-@media (max-width: 600px) {
-    .profile-circle {
-        width: 150px;
-        height: 150px;
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
     }
 
-    .icon {
-        font-size: 3rem; /* Slightly smaller icons for mobile */
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f4f4f4;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      margin: 0;
+    }
+
+    .container {
+      position: relative;
+      text-align: center;
+    }
+
+    .profile-circle {
+      width: 400px;
+      height: 400px;
+      border-radius: 50%;
+      overflow: hidden;
+      border: 5px solid #333;
+      margin: 0 auto; /* Centering the profile-circle horizontally */
+    }
+
+    .profile-circle img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
     }
 
     .contact-icons {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      width: 650px; /* Adjusted to match the profile-circle size */
+      height: 650px; /* Adjusted to match the profile-circle size */
+      transform: translate(-50%, -50%);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .icon {
+      font-size: 4rem; /* Increased size */
+      color: #111111;
+      text-decoration: none;
+      transition: color 0.3s ease;
+      position: absolute;
+    }
+
+    .icon:hover {
+      color: #6ec418;
+    }
+
+    /* Positioning the icons */
+    .phone {
+      top: 10%; /* Positioned at 12 o'clock */
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
+
+    .phone:hover {
+      color: #25D366;
+    }
+
+    .email {
+      bottom: 10%; /* Positioned at 6 o'clock */
+      left: 50%;
+      transform: translate(-50%, 50%);
+    }
+
+    .email:hover {
+      color: #fbbc05;
+    }
+
+    .instagram {
+      right: 10%; /* Positioned at 3 o'clock */
+      top: 50%;
+      transform: translate(50%, -50%);
+    }
+
+    .instagram:hover {
+      color: #e1306c;
+    }
+
+    .linkedin {
+      left: 10%; /* Positioned at 9 o'clock */
+      top: 50%;
+      transform: translate(-50%, -50%);
+    }
+
+    .linkedin:hover {
+      color: #0077B5;
+    }
+
+    /* Mobile adjustments */
+    @media (max-width: 600px) {
+      .profile-circle {
+        width: 150px;
+        height: 150px;
+      }
+
+      .icon {
+        font-size: 3rem; /* Slightly smaller icons for mobile */
+      }
+
+      .contact-icons {
         width: 250px;
         height: 250px;
+      }
     }
-}
-
   </style>
-
-  </head>
+</head>
 
 <body>
-  
-
-
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Contact Me</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-
-
-    <div class="container">
-        <div class="profile-circle">
-    <img src="myPhoto.jpeg" alt="Your Photo" style="width: 400px; height: 400px; border-radius: 50%; object-fit: cover;">
-</div>
-        <div class="contact-icons">
-            <a href="tel:+436644141540" class="icon phone">
-                <i class="fas fa-phone"></i>
-            </a>
-            <a href="mailto:fasching.andreas@outlook.com" class="icon email">
-                <i class="fas fa-envelope"></i>
-            </a>
-            <a href="https://instagram.com/the.andymancan" target="_blank" class="icon instagram">
-                <i class="fab fa-instagram"></i>
-            </a>
-            <a href="https://www.linkedin.com/in/andreas-fasching-478200329/" target="_blank" class="icon linkedin">
-                <i class="fab fa-linkedin"></i>
-            </a>
-        </div>
+  <div class="container">
+    <div class="profile-circle">
+      <img src="myPhoto.jpeg" alt="Your Photo">
     </div>
-
-
-</body></html>
+    <div class="contact-icons">
+      <a href="tel:+436644141540" class="icon phone">
+        <i class="fas fa-phone"></i>
+      </a>
+      <a href="mailto:fasching.andreas@outlook.com" class="icon email">
+        <i class="fas fa-envelope"></i>
+      </a>
+      <a href="https://instagram.com/the.andymancan" target="_blank" class="icon instagram">
+        <i class="fab fa-instagram"></i>
+      </a>
+      <a href="https://www.linkedin.com/in/andreas-fasching-478200329/" target="_blank" class="icon linkedin">
+        <i class="fab fa-linkedin"></i>
+      </a>
+    </div>
+  </div>
+</body>
+</html>
