--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     body {
       font-family: Arial, sans-serif;
-      background-color: #f4f4f4;
+      background: radial-gradient(circle, #f4f4f4 30%, #808080 100%); /* Light in center, dark at edges */
       display: flex;
       justify-content: center;
       align-items: center;
