--- a/index.html
+++ b/index.html
@@ -117,12 +117,28 @@
       }
 
       .icon {
-        font-size: 3.5rem; /* Slightly smaller icons for mobile */
+        font-size: 3.0rem; /* Slightly smaller icons for mobile */
       }
 
       .contact-icons {
         width: 300px;
         height: 300px;
+      }
+
+      .phone {
+        top: 5%; /* Moved further away from the center */
+      }
+
+      .email {
+        bottom: 5%; /* Moved further away from the center */
+      }
+
+      .instagram {
+        right: 5%; /* Moved further away from the center */
+      }
+
+      .linkedin {
+        left: 5%; /* Moved further away from the center */
       }
     }
   </style>
