--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
     </div>
     <div class="contact-icons">
       <a href="tel:+436644141540" class="icon phone">
-        <i class="fas fa-phone"></i>
+        <i class="fas fa-whatsapp"></i>
       </a>
       <a href="mailto:fasching.andreas@outlook.com" class="icon email">
         <i class="fas fa-envelope"></i>
