--- a/index.html
+++ b/index.html
@@ -135,6 +135,10 @@
         width: 300px;
         height: 300px;
       }
+      
+      .whatsapp {
+        top: 5%; /* Moved further away from the center */
+      }
 
       .phone {
         top: 5%; /* Moved further away from the center */
